// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DestinationList custom messages 1`] = `
<DestinationList
  height={400}
  itemHeight={40}
  listRenderer={[Function]}
  messages={
    Object {
      "clearAllMessage": "Uncheck all",
      "noItemsMessage": "No entries available...",
      "noneSelectedMessage": "Nothing",
      "searchPlaceholder": "Find...",
      "selectAllMessage": "Check all",
      "selectedMessage": "Checked",
    }
  }
  noItemsRenderer={[Function]}
  selectedIds={Array []}
  selectedItemRenderer={[Function]}
  selectedItems={Array []}
  selectionStatusRenderer={[Function]}
  withGrouping={false}
/>
`;

exports[`DestinationList custom noItemsRenderer 1`] = `
<DestinationList
  height={400}
  itemHeight={40}
  listRenderer={[Function]}
  messages={Object {}}
  noItemsRenderer={[MockFunction mockedComponent]}
  selectedIds={Array []}
  selectedItemRenderer={[Function]}
  selectedItems={Array []}
  selectionStatusRenderer={[Function]}
  withGrouping={false}
/>
`;

exports[`DestinationList custom selectedItemRenderer 1`] = `
<DestinationList
  height={400}
  itemHeight={40}
  listRenderer={[Function]}
  messages={Object {}}
  noItemsRenderer={[Function]}
  selectedIds={Array []}
  selectedItemRenderer={[MockFunction mockedComponent]}
  selectedItems={Array []}
  selectionStatusRenderer={[Function]}
  withGrouping={false}
/>
`;

exports[`DestinationList custom selectionStatusRenderer 1`] = `
<DestinationList
  height={400}
  itemHeight={40}
  listRenderer={[Function]}
  messages={Object {}}
  noItemsRenderer={[Function]}
  selectedIds={Array []}
  selectedItemRenderer={[Function]}
  selectedItems={Array []}
  selectionStatusRenderer={[MockFunction mockedComponent]}
  withGrouping={false}
/>
`;

exports[`DestinationList default snapshot 1`] = `
<DestinationList
  height={400}
  itemHeight={40}
  listRenderer={[Function]}
  messages={Object {}}
  noItemsRenderer={[Function]}
  selectedIds={Array []}
  selectedItemRenderer={[Function]}
  selectedItems={Array []}
  selectionStatusRenderer={[Function]}
  withGrouping={false}
/>
`;

exports[`DestinationList enable right search 1`] = `<App />`;

exports[`DestinationList passed clearAll 1`] = `
<DestinationList
  clearAll={[MockFunction clearAll]}
  height={400}
  itemHeight={40}
  listRenderer={[Function]}
  messages={Object {}}
  noItemsRenderer={[Function]}
  selectedIds={Array []}
  selectedItemRenderer={[Function]}
  selectedItems={Array []}
  selectionStatusRenderer={[Function]}
  withGrouping={false}
/>
`;

exports[`DestinationList passed selectedIds 1`] = `
<DestinationList
  height={400}
  itemHeight={40}
  listRenderer={[Function]}
  messages={Object {}}
  noItemsRenderer={[Function]}
  selectedIds={
    Array [
      1,
      2,
    ]
  }
  selectedItemRenderer={[Function]}
  selectedItems={Array []}
  selectionStatusRenderer={[Function]}
  withGrouping={false}
/>
`;

exports[`DestinationList passed selectedItems 1`] = `
<DestinationList
  height={400}
  itemHeight={40}
  listRenderer={[Function]}
  messages={Object {}}
  noItemsRenderer={[Function]}
  selectedIds={Array []}
  selectedItemRenderer={[Function]}
  selectedItems={
    Array [
      1,
      2,
    ]
  }
  selectionStatusRenderer={[Function]}
  withGrouping={false}
/>
`;

exports[`DestinationList passed selectedItems with grouping 1`] = `
<DestinationList
  height={400}
  itemHeight={40}
  listRenderer={[Function]}
  messages={Object {}}
  noItemsRenderer={[Function]}
  selectedIds={Array []}
  selectedItemRenderer={[Function]}
  selectedItems={
    Array [
      Object {
        "group": "group1",
        "id": 1,
        "label": "item1",
      },
      Object {
        "group": "group2",
        "id": 2,
        "label": "item2",
      },
      Object {
        "group": "group1",
        "id": 3,
        "label": "item3",
      },
    ]
  }
  selectionStatusRenderer={[Function]}
  withGrouping={true}
/>
`;

exports[`DestinationList passed selectedItems with grouping and empty items 1`] = `
<DestinationList
  height={400}
  itemHeight={40}
  listRenderer={[Function]}
  messages={Object {}}
  noItemsRenderer={[Function]}
  selectedIds={Array []}
  selectedItemRenderer={[Function]}
  selectedItems={Array []}
  selectionStatusRenderer={[Function]}
  withGrouping={true}
/>
`;

exports[`DestinationList passed unselectItems 1`] = `
<DestinationList
  height={400}
  itemHeight={40}
  listRenderer={[Function]}
  messages={Object {}}
  noItemsRenderer={[Function]}
  selectedIds={Array []}
  selectedItemRenderer={[Function]}
  selectedItems={Array []}
  selectionStatusRenderer={[Function]}
  unselectItems={[MockFunction unselectItems]}
  withGrouping={false}
/>
`;
